@@ -1,0 +1,15 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2015-09-21T16:14:03Z"
+ content="""
+The assistant does not normally do this when you merely start it up. It does it
+when you configure a ssh remote, when it needs to modify that file.
+It might also modify the file on startup if it detects a configuration that
+an old version of the assistant put in that needs to be fixed up.
+
+Is the trailing whitespace you speak of just a newline added after the
+existing host block, or something else? Your "..." is not very clear.
+
+Fixed symlink issue in git.
+"""]]
